<resources>
    <string name="app_name">What To Eat</string>
    <string name="title_home">Home</string>
    <string name="title_map">Map</string>
    <string name="title_food">Food</string>
    <string name="title_account">Account</string>
    <string name="title_info">Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emailReg">Email</string>
    <string name="addressReg">Address + City"</string>
    <string name="passwordReg">Password</string>
    <string name="emailLogin">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="nameReg">Username</string>
    <string name="what_to_eat" />
    <string name="team" />
    <string name="kuzey_hamidoglu" />
    <string name="user_name">test</string>
    <string name="firebase_web_client_id">1004996453779-e9t7jpga32sbiso49sr27bmtrpk8cm0b.apps.googleusercontent.com</string>
    <string name="phoneReg">Phone Number</string>
    <string name="italian">Italian</string>
    <string name="french">French</string>
    <string name="mexican">Mexican</string>
    <string name="greek">Greek</string>
    <string name="chinese">Chinese</string>
    <string name="american">American</string>
    <string name="eqyptian">Eqyptian</string>
    <string name="tired">Tired</string>
    <string name="excited">Excited</string>
    <string name="sad">Sad</string>
    <string name="happy">Happy</string>
    <string name="statistics">Statistics:</string>
    <string name="total_likes_of_all_moods">Total likes of all moods:</string>
    <string name="mood">Loading data..</string>
</resources>