<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/outline_home_24"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/outline_map_24"
        android:title="@string/title_map" />

    <item
        android:id="@+id/nav_food"
        android:icon="@drawable/outline_local_dining_24"
        android:title="@string/title_food" />
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/outline_person_24"
        android:title="@string/title_account" />
    <item
        android:id="@+id/nav_info"
        android:icon="@drawable/outline_info_24"
        android:title="@string/title_info" />

</menu>