<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.whattoeat.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.example.whattoeat.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/nav_food"
        android:name="com.example.whattoeat.ui.food.FoodFragment"
        android:label="@string/title_food"
        tools:layout="@layout/fragment_food" />

    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.whattoeat.ui.account.AccountPageFragment"
        android:label="@string/title_account"
        tools:layout="@layout/activity_account_details" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.example.whattoeat.ui.info.InfoFragment"
        android:label="@string/title_info"
        tools:layout="@layout/fragment_info" />

</navigation>